--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
                     </button>
                 </div>
             </div>
+            <div class="hero-visual">
+                <!-- Particles will be rendered as full-screen overlay -->
+                <div class="hero-overlay-text">
+                    <span class="overlay-hint">Mova o mouse para interagir</span>
+                </div>
+            </div>
         </div>
         <div class="scroll-indicator">
             <div class="scroll-arrow"></div>
